Fixed the footer, had to add position: relative and overflow: hidden to the body element

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,8 @@
 }
 
 body {
-    width: 100%;
-    height: 100%;
+    position: relative;
+    overflow: hidden;
     font-family: Calibri, Arial, Verdana;
 	font-size: 0.9em;
 	-webkit-transition: background-color 5s ease;
